samples/_failures_safe/1761072238_5ca12b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2cf006ca.c: In function ‘write_results’:
./samples/SAFE/__tmp_2cf006ca.c:191:5: error: expected identifier at end of input
  191 |     if (pc->
      |     ^~
./samples/SAFE/__tmp_2cf006ca.c:191:5: error: expected declaration or statement at end of input
